-work on ipynb; -remove checkpoints

--- a/dream_pytorch.ipynb
+++ b/dream_pytorch.ipynb
@@ -274,17 +274,17 @@
     "            loss = out.norm()\n",
     "            loss.backward()\n",
     "            \n",
-    "            grad_np = input.grad.data.cpu().numpy()\n",
+    "            grad = input.grad.data.cpu().numpy()\n",
     "            sigma = (i * 4.0) / iterations + 0.5\n",
-    "            grad_smooth1 = torch.Tensor(gaussian_filter(grad_np, sigma=sigma))\n",
-    "            grad_smooth2 = torch.Tensor(gaussian_filter(grad_np, sigma=sigma*2))\n",
-    "            grad_smooth3 = torch.Tensor(gaussian_filter(grad_np, sigma=sigma*0.5))\n",
-    "            grad = (grad_smooth1 + grad_smooth2 + grad_smooth3).to(device)\n",
+    "            grad_smooth1 = torch.Tensor(gaussian_filter(grad, sigma=sigma)).to(device)\n",
+    "            grad_smooth2 = torch.Tensor(gaussian_filter(grad, sigma=sigma*2)).to(device)\n",
+    "            grad_smooth3 = torch.Tensor(gaussian_filter(grad, sigma=sigma*0.5)).to(device)\n",
+    "            grad = grad_smooth1 + grad_smooth2 + grad_smooth3\n",
     "            \n",
     "            std_grad = grad.std()\n",
     "            norm_lr = lr / std_grad\n",
     "            input.data += norm_lr * grad.data\n",
-    "            #input.data = self.clip(input.data)\n",
+    "            input.data = self.clip(input.data)\n",
     "            input.grad.data.zero_()\n",
     "        return input\n",
     "\n",
@@ -331,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = load_image('images/mush.jpg')\n",
+    "image = load_image('images/dark_forest_2.jpg')\n",
     "print(\"Image Loaded.\")"
    ]
   },
@@ -359,24 +359,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "blend = range(0, 21)\n",
+    "layers = range(23, 31)\n",
     "dreamMachine = DeepDream(image, network, device)\n",
     "\n",
-    "for i in blend:\n",
+    "for i in layers:\n",
     "    print(\"Layer:\", i)\n",
     "    dreamed_image = dreamMachine.apply(\n",
-    "        at_layer=12,\n",
-    "        iterations=10,\n",
-    "        lr=0.01,\n",
+    "        at_layer=i,\n",
+    "        iterations=20,\n",
+    "        lr=0.015,\n",
     "        octave_scale=1.428,\n",
     "        num_octaves=4,\n",
-    "        blend=i/20,\n",
+    "        blend=0.5,\n",
     "    )\n",
-    "    plot_image(dreamed_image)\n",
+    "    plot_image(resize(dreamed_image, factor=4/3))\n",
     "    #save_image(dreamed_image, f\"images_dreamed/mush_{str(i)}.jpg\")"
    ]
   },
